# GraffitiEditor

./: MILLIONDOLLARSOFTWARE.py  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DrawingArea.tsx  ToolBar.tsx
src/components/tools/: EraserTool.tsx  LineTool.tsx  PenTool.tsx  PrintTool.tsx  RectTool.tsx
src/lib/: Vector.ts  utils.ts
src/src/: App.tsx
src/src/components/tools/: RectTool.tsx
