[package]
name = "graffitieditor"
version = "0.0.0"
description = "Editor for making cool graffiti."
authors = ["Imtiaz Al Shariar | TheGraffitiTeam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "windows7-compat"] }
serde = { version = "1", features = ["derive"] }

serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
